@@ -4,7 +4,7 @@ AUTOMAKE_OPTIONS = 1.5
 
 SUBDIRS = intl po m4 vfs slang edit src lib doc syntax
 
-EXTRA_DIST =	FAQ INSTALL.FAST MAINTAINERS README.QNX extraconf.h
+EXTRA_DIST = FAQ INSTALL.FAST MAINTAINERS README.QNX
 
 noinst_DATA = mc.spec
 
