@@ -138,11 +138,6 @@ done
 AC_SUBST(DOC_LINGUAS)
 
 dnl
-dnl Hack to make extraconf.h visible even if compiling outside srcdir.
-dnl
-CPPFLAGS="$CPPFLAGS -I\$(top_srcdir)"
-
-dnl
 dnl Enforce coding standards
 dnl
 if test "x$GCC" = xyes; then
@@ -180,11 +175,15 @@ dnl
 dnl Check availability of some functions 
 dnl 
 
-AC_CHECK_FUNCS([strerror statfs strftime getsid \
-		memmove truncate initgroups putenv \
-		memset memcpy tcsetattr tcgetattr cfgetospeed \
-		sigaction sigemptyset sigprocmask sigaddset \
-		sysconf setuid setreuid])
+AC_CHECK_FUNCS([cfgetospeed getsid initgroups memcpy memmove memset \
+		putenv setreuid setuid statfs strerror strftime \
+		sysconf tcgetattr tcsetattr truncate])
+
+dnl S-Lang needs all four functions to be defined to use POSIX signal API
+AC_CHECK_FUNCS([sigaction sigemptyset sigprocmask sigaddset], , [slang_signals=no])
+if test x$slang_signals != xno; then
+    AC_DEFINE(SLANG_POSIX_SIGNALS, 1, [Define to use POSIX signal API in S-Lang])
+fi
 
 dnl
 dnl getpt is a GNU Extension (glibc 2.1.x)
@@ -580,8 +579,6 @@ AM_CONDITIONAL(USE_MCFS, [test -n "$use_mcfs"])
 AM_CONDITIONAL(INCLUDED_SLANG, [test "x$with_screen" = xmcslang])
 AM_CONDITIONAL(CHARSET, [test -n "$have_charset"])
 AM_CONDITIONAL(CONS_SAVER, [test -n "$cons_saver"])
-
-AH_BOTTOM([#include <extraconf.h>])
 
 AC_CONFIG_FILES([
 Makefile 
